finance_added